--- a/oscar/templates/oscar/checkout/layout.html
+++ b/oscar/templates/oscar/checkout/layout.html
@@ -40,7 +40,10 @@
                 {% endfor %}
             {% endblock %}
 
-            {% block content %}{% endblock %}
+
+            {% block content %}
+ 
+            {% endblock %}
 
         </div><!-- /page_inner -->
     </div>
