--- a/oscar/templates/oscar/layout.html
+++ b/oscar/templates/oscar/layout.html
@@ -10,7 +10,7 @@
     {% include "oscar/partials/nav_accounts.html" %}
 
     {# Site logo/title, mini-basket, browse dropdown and searchbox #}
-    <header class="header container">
+    <header class="header ">
         <div class="page_inner">
             <div class="row justify-content-between">
                 {% include "oscar/partials/brand.html" %}
@@ -23,9 +23,14 @@
         {% endblock %}
     </header>
 
+
+
+
+
     {# Main content of page - other layout templates may override this block #}
+
     {% block content_wrapper %}
-        <div class="container page">
+        <div class=" page">
             <div class="page_inner">
                 {% block breadcrumbs %}{% endblock %}
                 {% block header %}
@@ -43,7 +48,30 @@
                 </div>
             </div>
         </div>
+
+       
+
+
+      
+
+      
+
+
+
+      
+
+
+
+
+
+
+
+
+
+
     {% endblock %}
+
+
 
     {% include "oscar/partials/footer.html" %}
 {% endblock %}
