--- a/oscar/templates/oscar/base.html
+++ b/oscar/templates/oscar/base.html
@@ -15,12 +15,18 @@
         {% endblock %}
 
         {# Block where global CSS will go. #}
-        {% block styles %}{% endblock %}
+        {% block styles %}
+        
+        {% endblock %}
 
         {# Additional CSS - specific to certain pages #}
-        {% block extrastyles %}{% endblock %}
+        {% block extrastyles %}
+        
+        {% endblock %}
 
-        {% block extrahead %}{% endblock %}
+        {% block extrahead %}
+        
+        {% endblock %}
 
         {% block tracking %}
             {# Default to using Google analytics #}
