--- a/oscar/templates/oscar/layout_3_col.html
+++ b/oscar/templates/oscar/layout_3_col.html
@@ -1,7 +1,7 @@
 {% extends "oscar/layout.html" %}
 
 {% block content_wrapper %}
-    <div class="container page">
+    <div class="containe page">
         <div class="page_inner">
             {% block breadcrumbs %}{% endblock %}
 
