--- a/oscar/templates/oscar/base.html
+++ b/oscar/templates/oscar/base.html
@@ -13,7 +13,7 @@
         {% block favicon %}
             <link rel="shortcut icon" href="{% static "oscar/favicon.ico" %}" />
         {% endblock %}
-
+        
         {# Block where global CSS will go. #}
         {% block styles %}
         
@@ -36,7 +36,9 @@
 
     <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}default{% endblock %}">
         {# Main content goes in this 'layout' block #}
-        {% block layout %}{% endblock %}
+        {% block layout %} 
+        
+        {% endblock %}
 
         {# Scripts loaded from a CDN. #}
         {% block cdn_scripts %}
