--- a/oscar/templates/oscar/layout_3_col.html
+++ b/oscar/templates/oscar/layout_3_col.html
@@ -1,8 +1,8 @@
 {% extends "oscar/layout.html" %}
 
 {% block content_wrapper %}
-    <div class="containe page">
-        <div class="page_inner">
+    <div class="containe page ">
+        <div class="page_inner mx-3">
             {% block breadcrumbs %}{% endblock %}
 
             <div class="row">
