--- a/oscar/templates/oscar/layout_2_col.html
+++ b/oscar/templates/oscar/layout_2_col.html
@@ -5,8 +5,8 @@ Keep the same header and footer as the standard layout template but override the
 main content area to split it into a sidebar and a content block
 {% endcomment %}
 {% block content_wrapper %}
-<div class="{% block content_wrapper_classes %}containe page{% endblock %}">
-    <div class="page_inner">
+<div class="{% block content_wrapper_classes %}containe page  {% endblock %}">
+    <div class="page_inner mx-3">
         {% block breadcrumbs %}{% endblock %}
         <div class="row">
 
